--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -2,7 +2,11 @@
   min-height: 200px;
 }
 
-.Contact img{
-  width: 200px;
-  height: 100%;
+.image-Wrapper {
+  width: 250px;
+}
+
+.Contact img {
+  max-height: 200px;
+  max-width: 250px;
 }
